# vigra_fastfilters

./: CMakeLists.txt  FindOpenEXR.cmake  VAD_JPEG.cmake  VAD_Python.cmake  VAD_TIFF.cmake  VigraAddDep.cmake  run_exec.sh.in  vad_activate.bat.in  vad_deactivate.bat.in  vad_path.in
cmake/vigra_cmake/: README.md  VAD_LibLZMA.cmake  VAD_PNG.cmake  VAD_Pybind11.cmake  VAD_XGBoost.cmake  VAD_ZLIB.cmake  VAD_target_properties.cmake  VAD_vigra_core.cmake  VigraAddDep.cmake  VigraAddTest.cmake  run_exec.bat.in  run_test.sh.in
include/vigra2/: fastfilters.hxx
test/: CMakeLists.txt  test_fastfilters.cxx
